SUBDIRS = dummy

if WITH_FACEBOOK
SUBDIRS += facebook
endif

if WITH_FLICKR
SUBDIRS += flickr
endif

if WITH_LASTFM
SUBDIRS += lastfm
endif

if WITH_PLURK
SUBDIRS += plurk
endif

if WITH_SMUGMUG
SUBDIRS += smugmug
endif

if WITH_TWITTER
SUBDIRS += twitter
endif

if WITH_VIMEO
SUBDIRS += vimeo
endif

if WITH_YOUTUBE
SUBDIRS += youtube
endif
